--- a/valuetransfer/src/main/res/layout/item_contacts_chat.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts_chat.xml
@@ -12,15 +12,12 @@
         android:id="@+id/clChatCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/pill_rounded"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/square_rounded_dark"
         android:paddingHorizontal="12dp"
         android:paddingVertical="12dp"
         app:layout_constraintEnd_toStartOf="@+id/clContactExchange"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="@drawable/pill_rounded"
-        tools:backgroundTint="@color/white">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/ivChatIconOverview"
@@ -63,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,12 +82,14 @@
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="4dp"
                 android:src="@drawable/ic_check_double"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/tvContactMessageOverview"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvContactMessageOverview"
                 app:layout_constraintTop_toBottomOf="@+id/tvContactNameOverview"
-                app:tint="@color/black"
-                tools:tint="@color/black" />
+                app:tint="@color/white"
+                tools:tint="@color/white" />
 
             <TextView
                 android:id="@+id/tvContactMessageOverview"
@@ -99,7 +98,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="Message"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12:00"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="12sp"
                 android:typeface="monospace"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -134,8 +133,7 @@
             android:id="@+id/ivRequest"
             android:layout_width="40dp"
             android:layout_height="30dp"
-            android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:background="@drawable/square_rounded_dark"
             android:src="@drawable/ic_baseline_arrow_drop_up_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,8 +145,7 @@
             android:id="@+id/ivTransfer"
             android:layout_width="40dp"
             android:layout_height="30dp"
-            android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:background="@drawable/square_rounded_dark"
             android:src="@drawable/ic_baseline_arrow_drop_down_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
