--- a/valuetransfer/src/main/res/layout/item_exchange_transaction.xml
+++ b/valuetransfer/src/main/res/layout/item_exchange_transaction.xml
@@ -12,16 +12,13 @@
         android:id="@+id/clTransactionCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/pill_rounded"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/square_rounded_dark"
         android:paddingVertical="8dp"
         android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="@color/white">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintTop_toTopOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clDirectionIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,7 +53,7 @@
             android:id="@+id/tvTransactionType"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/clDirectionIcon"
@@ -68,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/tvTransactionCurrencySymbol"
@@ -81,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text="ET"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +88,7 @@
             android:id="@+id/tvTransactionDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/dark_gray"
+            android:textColor="@color/light_gray"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/clDirectionIcon"
             app:layout_constraintTop_toBottomOf="@+id/tvTransactionType"
@@ -150,7 +147,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Signed"
-            android:textColor="@color/dark_gray"
+            android:textColor="@color/light_gray"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTransactionDate"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -171,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="Transaction Content"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/white"
                 android:textSize="10sp"
                 android:textStyle="italic|bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -182,7 +179,7 @@
                 android:id="@+id/tvTransactionContentText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/light_gray"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tvTransactionContentTitle"
@@ -195,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="Receiver"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/white"
                 android:textSize="10sp"
                 android:textStyle="italic|bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -206,7 +203,7 @@
                 android:id="@+id/tvTransactionSenderReceiverText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/light_gray"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tvTransactionSenderReceiverTitle"
@@ -219,7 +216,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="Type"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/white"
                 android:textSize="10sp"
                 android:textStyle="italic|bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -230,7 +227,7 @@
                 android:id="@+id/tvTransactionTypeText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/light_gray"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tvTransactionTypeTitle"
@@ -243,7 +240,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="Block Hash"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/white"
                 android:textSize="10sp"
                 android:textStyle="italic|bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -254,7 +251,7 @@
                 android:id="@+id/tvTransactionBlockHashText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/light_gray"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tvTransactionBlockHashTitle"
