--- a/valuetransfer/src/main/res/layout/fragment_exchange_vt.xml
+++ b/valuetransfer/src/main/res/layout/fragment_exchange_vt.xml
@@ -17,16 +17,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clBalanceRow"
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:background="@drawable/square_rounded_dark"
+            android:background="@drawable/square_rounded_dark_green"
             android:paddingStart="16dp"
             android:paddingEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:background="@drawable/square_rounded_dark">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/ivBalanceIcon"
@@ -37,36 +37,142 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white"
-                tools:tint="@color/white"/>
+                tools:tint="@color/white" />
+
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                android:id="@+id/clBalanceAmount"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/ivBalanceIcon"-->
+<!--                app:layout_constraintTop_toTopOf="parent">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tvBalanceAmountTitle"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Unsettled"-->
+<!--                    android:textColor="@color/gray"-->
+<!--                    android:textSize="10sp"-->
+<!--                    android:textStyle="italic"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tvBalanceAmount"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="24sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toBottomOf="@+id/tvBalanceAmountTitle"-->
+<!--                    android:text="0.00" />-->
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tvBalanceAmountSlash"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="4dp"-->
+<!--                android:text="/"-->
+<!--                android:textColor="@color/colorYellow"-->
+<!--                android:textSize="20sp"-->
+<!--                android:textStyle="bold"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/clBalanceAmount"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/clBalanceAmount" />-->
 
             <TextView
-                android:id="@+id/tvBalanceAmount"
+                android:id="@+id/tvBalanceAmountTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Including Unverified Transactions"
+                android:textColor="@color/gray"
+                android:textSize="10sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@+id/clBalanceAmount"
+                app:layout_constraintBottom_toTopOf="@+id/clBalanceAmount" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clBalanceAmount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="0.00"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivBalanceIcon"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tvBalanceVerifiedAmountTitle"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Verified"-->
+<!--                    android:textColor="@color/gray"-->
+<!--                    android:textSize="10sp"-->
+<!--                    android:textStyle="italic"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent" />-->
+
+                <TextView
+                    android:id="@+id/tvBalanceAmount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="0.00" />
+
+                <TextView
+                    android:id="@+id/tvBalanceVerifiedAmount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="0.00" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/tvBalanceSymbol"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="8dp"
                 android:text="ET"
                 android:textColor="@color/light_gray"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/tvBalanceAmount"
+                app:layout_constraintStart_toEndOf="@+id/clBalanceAmount"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/ivBalanceErrorIcon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="8dp"
+                android:padding="4dp"
+                android:src="@drawable/ic_baseline_info_24"
+                app:tint="@color/red"
+                tools:tint="@color/red"
+                android:visibility="gone"
+                android:tooltipText="Verified balance differs from the correct balance, click the balance to see the difference"
+                app:layout_constraintBottom_toBottomOf="@+id/tvBalanceSymbol"
+                app:layout_constraintStart_toEndOf="@+id/tvBalanceSymbol"
+                app:layout_constraintTop_toTopOf="@+id/tvBalanceSymbol" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clButtonBuy"
-                android:layout_width="70dp"
+                android:layout_width="50dp"
                 android:layout_height="24dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/pill_rounded"
@@ -79,7 +185,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:paddingHorizontal="4dp"
                     android:text="Buy"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +196,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clButtonSell"
-                android:layout_width="70dp"
+                android:layout_width="50dp"
                 android:layout_height="24dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/pill_rounded"
@@ -104,7 +209,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:paddingHorizontal="4dp"
                     android:text="Sell"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -121,10 +225,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginEnd="2dp"
         android:layout_marginTop="4dp"
-        android:background="@drawable/square_rounded_dark"
-        app:layout_constraintEnd_toStartOf="@+id/clTransferContact"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/square_rounded_dark_green"
+        app:layout_constraintEnd_toStartOf="@+id/clTransferToContact"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clBalance">
 
@@ -146,21 +250,21 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/ic_qr_code_scan"
-            app:tint="@color/white"
-            tools:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:tint="@color/white"
+            tools:tint="@color/white" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clTransferContact"
+        android:id="@+id/clTransferToContact"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
         android:layout_marginTop="4dp"
-        android:background="@drawable/square_rounded_dark"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/square_rounded_dark_green"
         app:layout_constraintEnd_toStartOf="@+id/clRequest"
         app:layout_constraintStart_toEndOf="@+id/clTransferQR"
         app:layout_constraintTop_toBottomOf="@+id/clBalance">
@@ -183,11 +287,11 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/ic_baseline_edit_24"
-            app:tint="@color/white"
-            tools:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:tint="@color/white"
+            tools:tint="@color/white" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -195,11 +299,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginEnd="12dp"
         android:layout_marginTop="4dp"
-        android:background="@drawable/square_rounded_dark"
+        android:layout_marginEnd="12dp"
+        android:background="@drawable/square_rounded_dark_green"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/clTransferContact"
+        app:layout_constraintStart_toEndOf="@+id/clTransferToContact"
         app:layout_constraintTop_toBottomOf="@+id/clBalance">
 
         <TextView
@@ -220,31 +324,57 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/ic_request"
-            app:tint="@color/white"
-            tools:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:tint="@color/white"
+            tools:tint="@color/white" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/tvTransactionsTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:text="Transactions"
         android:textColor="@color/white"
         android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/pbLoadingSpinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clRequest" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/ivReloadTransactions"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/ic_baseline_refresh_24"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTransactionsTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvTransactionsTitle" />
+
+    <ProgressBar
+        android:id="@+id/pbLoadingSpinner"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintDimensionRatio="H,1:1"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/white"
+        android:indeterminateTintMode="src_atop"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTransactionsTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvTransactionsTitle" />
 
     <TextView
         android:id="@+id/tvNoTransactions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/pill_rounded"
         android:paddingVertical="4dp"
         android:text="There are no transactions yet"
@@ -260,8 +390,8 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fillViewport="true"
         android:layout_marginTop="12dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -269,7 +399,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvTransactions"
@@ -285,7 +416,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:paddingHorizontal="12dp"
                 android:paddingVertical="8dp"
@@ -293,18 +423,17 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvTransactions"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/rvTransactions" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:id="@+id/bnvExchange"-->
-<!--        style="@style/BottomNavigation"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/colorPrimaryValueTransfer"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:menu="@menu/valuetransfer_navigation_menu" />-->
+    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+    <!--        android:id="@+id/bnvExchange"-->
+    <!--        style="@style/BottomNavigation"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@color/colorPrimaryValueTransfer"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:menu="@menu/valuetransfer_navigation_menu" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
